Upgrading Java version to 21